Moving to a canvas setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,8 @@
 
   "globals": {
     "$": true,
-    "buzz": true
+    "buzz": true,
+    "Player": true
   },
 
   "plugins": [
@@ -78,7 +79,7 @@
 
     "block-scoped-var": 0,      // treat var statements as if they were block scoped (off by default)
     "complexity": 1,            // specify the maximum cyclomatic complexity allowed in a program (off by default)
-    "consistent-return": 1,     // require return statements to either always or never specify values
+    "consistent-return": 0,     // require return statements to either always or never specify values
     "curly": 1,                 // specify curly brace conventions for all control statements
     "default-case": 0,          // require default case in switch statements (off by default)
     "dot-notation": 1,          // encourages use of dot notation whenever possible
